<resources>
    <string name="app_name">Wedding</string>
    <string name="jeannete">JEANNETE</string>
    <string name="ring">ring</string>
    <string name="register">REGISTER</string>
    <string name="malvin">MALVIN</string>
    <string name="the_wedding">THE WEDDING</string>
    <string name="wedding_register">wedding_register</string>
    <string name="m_j"><![CDATA[M & J]]></string>
    <string name="ring_to_hand">ring_to_hand</string>
    <string name="title_pic_wedding">THE WEDDING</string>
    <string name="malvin_jeannete"><![CDATA[MALVIN & JEANNETE]]></string>
    <string name="wedding_ceremony">WEDDING CEREMONY</string>
    <string name="ampersant"><![CDATA[&]]></string>
    <string name="date">Monday, April 8th 2022</string>
    <string name="time700">07.00 PM</string>
    <string name="kila_infinity8_bali">Kila Infinity8, Bali</string>
    <string name="clock">clock</string>
    <string name="start_celebration">START CELEBRATION</string>
    <string name="geolocation">geolocation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="about_us">About Us</string>
    <string name="home">Home</string>
    <string name="images">Images</string>
    <string name="list">List</string>
    <string name="profile">Profile</string>
    <string name="flowers">flowers</string>
    <string name="the_first_meet">THE FIRST MEET</string>
    <string name="_2018">2018</string>
    <string name="engagement">ENGAGEMENT</string>
    <string name="_10_11_2022">10 - 11- 2022</string>
    <string name="leo_ipsum_justo_enim_augue_neque_eu_pulvinar_etiam_elit_quam_gravida_a_nec_mauris_eu_nulla_vulputate_vitae_nisl_massa_vulputate_tellus_sit_sit_integer_cras_nibh_sodales_sit_pharetra_tellus_elit_in">Leo ipsum justo, enim augue neque, eu pulvinar etiam. Elit quam gravida a nec. Mauris eu nulla vulputate vitae nisl, massa vulputate tellus sit. Sit integer cras nibh sodales. Sit pharetra, tellus elit in.</string>
    <string name="adipiscing_vulputate_platea_pharetra_et_purus_ultricies_aliquam_et_amet_quam_neque_pellentesque_id_risus_sit_diam_sit_tellus_iaculis_mi_ac_tempor_risus_aliquet_magna_sed_sem_et_pellentesque_ullamcorper_semper_libero_maecenas_viverra_dictum">Adipiscing vulputate platea pharetra et purus ultricies. Aliquam et, amet, quam neque. Pellentesque id risus, sit diam sit tellus iaculis mi. Ac tempor risus aliquet magna sed sem et pellentesque ullamcorper. Semper libero maecenas viverra dictum.</string>
    <string name="_25_01_2022">25 - 01 - 2022</string>
    <string name="marriage">MARRIAGE</string>
    <string name="album">ALBUM</string>
    <string name="pre_wedding">Pre Wedding</string>
    <string name="images_1">images_1</string>
    <string name="images_2" />
    <string name="images_3" />
    <string name="image_5">image_5</string>
    <string name="image_4">image_4</string>
    <string name="images_9" />
    <string name="bouqette">bouqette</string>
    <string name="list_flowers">list_flowers</string>
    <string name="we_look_forward_for_your_attendance">We Look forward for your Attendance</string>
    <string name="guest">Guest</string>
    <string name="name">Name</string>
    <string name="partner">Partner</string>
    <string name="email">Email</string>
    <string name="sorry">Sorry</string>
    <string name="attending">Attending</string>
    <string name="diagram">diagram</string>
    <string name="not_attend">Not Attend</string>
    <string name="havent_registered">Havent Registered</string>
    <string name="Attending">Attending</string>
    <string name="attendance">Attendance</string>
    <string name="no">No</string>
    <string name="status">Status</string>
    <string name="attend">Attend</string>
    <string name="_29_mar_2022">29 Mar 2022</string>
    <string name="_28_mar_2022">28 Mar 2022</string>
    <string name="_16_56">16.56</string>
    <string name="_11_34">11.34</string>
    <string name="_09_12">09.12</string>
</resources>